# rust-axum-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
src/: application.rs  lib.rs  main.rs  telemetry.rs  views.rs
src/routes/: health_check.rs
src/todos/: controller.rs  inmemory_repository.rs  mod.rs  model.rs  repository.rs  router.rs
templates/: index.html
tests/api/: health_check.rs  helpers.rs  main.rs
tests/api/todos/: add.rs  delete_todo.rs  get_all.rs  get_todo.rs  mod.rs  update_todo.rs
