[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-axum-template"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
