[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-axum-template"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.6"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-bunyan-formatter = "0.3.9"
serde = { version = "1.0.210", features = ["derive"] }
axum-macros = "0.4.2"
http-body-util = "0.1.2"

[dev-dependencies]
hyper = { version = "1.1.0", features = ["full"] }
mime = "0.3.17"
serde_json = "1.0.128"
tower = { version = "0.5.1", features = ["util"] }
