[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-axum-template"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.3", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-log = "0.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-bunyan-formatter = "0.3.10"
serde = { version = "1.0.219", features = ["derive"] }
axum-macros = "0.5.0"
http-body-util = "0.1.2"
tera = "1.20.0"
axum-template = { version = "3.0.0", features = ["tera"] }

[dev-dependencies]
hyper = { version = "1.6.0", features = ["full"] }
mime = "0.3.17"
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["util"] }
